--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
+#Configuración de base de datos:
+spring.datasourse.url=jdbc:h2:men:productos
+spring.datasourse.username=sa
+spring.datasourse.password=
+
+#Nos muestra por consola todas las sentencias SQL:
+spring.jpa.show-sql=true
+
+#La primera vez inica la aplicasión, si no hay DB la crea
+#si ya está creada no hace nada.
+spring.jpa.hibernate.ddl-auto=update
+
+#Podemos manipular H22 desde un browser:
+spring.h2.console.enabled=true
+
+#URL donde vamos acceder a la base de datos localhost:8080/h2-vi :
+localhost:8080/h2-console
+#ruta :
+spring.h2.console.path=/h2.vi
 
