Create package and class productos and getter & setter $ contructor

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,8 +13,9 @@ spring.jpa.hibernate.ddl-auto=update
 #Podemos manipular H22 desde un browser:
 spring.h2.console.enabled=true
 
-#URL donde vamos acceder a la base de datos localhost:8080/h2-vi :
+#192.168.100.10:8082
+#URL donde vamos acceder a la base de datos localhost:8080/h2-ui :
 localhost:8080/h2-console
 #ruta :
-spring.h2.console.path=/h2.vi
+spring.h2.console.path=/h2.ui
 
