middle errors save products

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 #Configuración de base de datos:
-spring.datasourse.url=jdbc:h2:men:productos
+spring.datasourse.url=jdbc:h2:mem:productos
+spring.datasourse.driverClassName= org.h2.Driver
 spring.datasourse.username=sa
 spring.datasourse.password=
 
@@ -15,7 +16,7 @@ spring.h2.console.enabled=true
 
 #192.168.100.10:8082
 #URL donde vamos acceder a la base de datos localhost:8080/h2-ui :
-localhost:8080/h2-console
+#localhost:8080/h2-console
 #ruta :
 spring.h2.console.path=/h2.ui
 
